--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="./assets/favicon/site.webmanifest">
-    <title>Andre Nobred Desenvolvedor PHP | LARAVEL</title>
+    <title>Andre Nobre Desenvolvedor PHP | LARAVEL</title>
 </head>
 <body class="d-flex h-100 text-center text-white bg-dark">
     
